поменял зависимости, чтобы не было проблем с запуском приложения