@@ -13,25 +13,34 @@ repositories {
 	mavenCentral()
 }
 
+bootRun { jvmArgs = ["--add-opens=java.base/java.lang=ALL-UNNAMED"] }
+
+tasks.named("bootBuildImage") {
+
+	imageName = 'bael-6094:latest'
+
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-security:2.7.2'
+	implementation 'org.springframework.boot:spring-boot-starter-security:3.0.4'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-maven-plugin:3.1.2'
 	implementation 'org.webjars.bower:jquery:3.6.0'
 	implementation 'org.webjars:bootstrap:5.1.3'
 	implementation 'org.webjars:bootstrap:4.0.0'
-	implementation 'ma.glasnost.orika:orika-core:1.5.4'
+	implementation 'org.modelmapper:modelmapper:3.1.1'
 	implementation 'org.webjars.bower:bootstrap-social:5.1.1'
 	implementation 'org.webjars.npm:bootstrap-icons:1.9.1'
 	implementation 'com.google.zxing:core:3.5.1'
 	implementation 'com.google.zxing:javase:3.5.1'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	implementation 'org.imgscalr:imgscalr-lib:4.2'
-	implementation 'com.vladmihalcea:hibernate-types-55:2.20.0'
+	implementation 'com.vladmihalcea:hibernate-types-55:2.21.1'
 	compileOnly 'org.projectlombok:lombok:1.18.24'
-	annotationProcessor 'org.projectlombok:lombok:1.18.24'
+	annotationProcessor 'org.projectlombok:lombok:1.18.26'
 	runtimeOnly 'org.postgresql:postgresql'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -49,4 +58,6 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
+apply plugin: 'application'
+applicationDefaultJvmArgs = ["--add-opens java.base/java.lang=ALL-UNNAMED"]
 
